Bug 49125 - sp_tex_sample.c:802:get_texel_2d_array: Assertion `layer < texture->array_size' failed.
Summary: sp_tex_sample.c:802:get_texel_2d_array: Assertion `layer < texture->array_siz...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-24 22:57 UTC by Vinson Lee
Modified: 2014-05-31 06:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2012-04-24 22:57:16 UTC
mesa: 1781d26faa6bf13950b95be97b6510e8f13290d6 (master)

Run piglit spec/glsl-1.30/execution/texelFetchOffset/fs-isampler2DArray on softpipe.


$ ./bin/texelFetch offset fs isampler2DArray -auto
Mesa warning: failed to remap index 173
sp_tex_sample.c:802:get_texel_2d_array: Assertion `layer < texture->array_size' failed.
Trace/breakpoint trap (core dumped)


(gdb) bt
#0  _debug_assert_fail (expr=<optimized out>, file=<optimized out>, 
    line=<optimized out>, function=<optimized out>) at util/u_debug.c:281
#1  0x00007fbc3bd332c8 in get_texel_2d_array (layer=-8, y=<optimized out>, 
    x=0, addr=..., samp=0x267fd30) at sp_tex_sample.c:802
#2  sample_get_texels (tgsi_sampler=0x267fd30, v_i=<optimized out>, 
    v_j=<optimized out>, v_k=0x7fff29890520, lod=<optimized out>, 
    offset=0x7fff298905c0 "\a\370\370\002", rgba=0x7fff29890540)
    at sp_tex_sample.c:2688
#3  0x00007fbc3bf22e6f in exec_txf (mach=0x2365250, inst=0x25bd9f0)
    at tgsi/tgsi_exec.c:2048
#4  0x00007fbc3bf255b1 in exec_instruction (mach=0x2365250, inst=0x25bd9f0, 
    pc=0x7fff29890adc) at tgsi/tgsi_exec.c:3931
#5  0x00007fbc3bf28a33 in tgsi_exec_machine_run (mach=0x2365250)
    at tgsi/tgsi_exec.c:4288
#6  0x00007fbc3bd369e8 in exec_run (var=0x25bca00, machine=<optimized out>, 
    quad=0x23b0ae0) at sp_fs_exec.c:133
#7  0x00007fbc3bd20fba in shade_quad (quad=<optimized out>, qs=<optimized out>)
    at sp_quad_fs.c:78
#8  shade_quads (qs=0x22a4b50, quads=0x7fff29890c58, nr=1) at sp_quad_fs.c:131
#9  0x00007fbc3bd27ab3 in clip_emit_quad (quad=0x23b0ae0, setup=0x23b0a60)
    at sp_setup.c:166
#10 sp_setup_point (setup=0x23b0a60, v0=<optimized out>) at sp_setup.c:1275
#11 0x00007fbc3bd1d578 in sp_vbuf_draw_arrays (vbr=<optimized out>, 
    start=<optimized out>, nr=2080) at sp_prim_vbuf.c:370
#12 0x00007fbc3bf92164 in draw_pt_emit_linear (emit=<optimized out>, 
    vert_info=<optimized out>, prim_info=0x7fff29890e60)
    at draw/draw_pt_emit.c:255
#13 0x00007fbc3bf0ae08 in emit (prim_info=0x7fff29890e60, 
    vert_info=0x7fff29890dd0, emit=<optimized out>)
    at draw/draw_pt_fetch_shade_pipeline.c:169
#14 fetch_pipeline_generic (middle=0x23836f0, fetch_info=0x0, 
    prim_info=0x7fff29890e60) at draw/draw_pt_fetch_shade_pipeline.c:287
#15 0x00007fbc3bf0af44 in fetch_pipeline_linear_run (middle=<optimized out>, 
    start=<optimized out>, count=2080, prim_flags=<optimized out>)
    at draw/draw_pt_fetch_shade_pipeline.c:346
#16 0x00007fbc3bf0e8e4 in vsplit_run_linear (frontend=0x2380bb0, start=0, 
    count=2080) at draw/draw_split_tmp.h:61
#17 0x00007fbc3bf092a8 in draw_pt_arrays (draw=0x237a230, prim=0, start=0, 
    count=2080) at draw/draw_pt.c:142
#18 0x00007fbc3bf09673 in draw_vbo (draw=0x237a230, info=0x7fff29891060)
    at draw/draw_pt.c:534
#19 0x00007fbc3bd1d2d9 in softpipe_draw_vbo (pipe=0x22a57c0, 
    info=0x7fff29891060) at sp_draw_arrays.c:99
#20 0x00007fbc3bde0989 in st_draw_vbo (ctx=0x23b6340, arrays=<optimized out>, 
    prims=<optimized out>, nr_prims=1, ib=0x0, 
    index_bounds_valid=<optimized out>, min_index=0, max_index=2079, 
    tfb_vertcount=0x0) at state_tracker/st_draw.c:1128
#21 0x00007fbc3bebae17 in vbo_draw_arrays (ctx=0x23b6340, 
    mode=<optimized out>, start=0, count=<optimized out>, numInstances=1)
    at vbo/vbo_exec_array.c:613
#22 0x0000000000433124 in stub_glDrawArrays (mode=0, first=0, count=2080)
    at piglit/tests/util/generated_dispatch.c:5061
#23 0x0000000000426a8e in piglit_display ()
    at piglit/tests/texturing/shaders/texelFetch.c:144
#24 0x00000000004290b1 in display ()
    at piglit/tests/util/piglit-framework.c:56
#25 0x00007fbc3ebe4220 in fghRedrawWindow (window=0x22a1460)
    at freeglut_main.c:210
#26 fghcbDisplayWindow (window=0x22a1460, enumerator=0x7fff298912f0)
    at freeglut_main.c:227
#27 0x00007fbc3ebe7939 in fgEnumWindows (
    enumCallback=0x7fbc3ebe4120 <fghcbDisplayWindow>, 
    enumerator=0x7fff298912f0) at freeglut_structure.c:394
#28 0x00007fbc3ebe465a in fghDisplayAll () at freeglut_main.c:249
#29 glutMainLoopEvent () at freeglut_main.c:1450
#30 0x00007fbc3ebe4f0e in glutMainLoop () at freeglut_main.c:1498
#31 0x000000000042984e in main (argc=4, argv=0x7fff29891648)
    at piglit/tests/util/piglit-framework.c:304
(gdb) frame 1
#1  0x00007fbc3bd332c8 in get_texel_2d_array (layer=-8, y=<optimized out>, 
    x=0, addr=..., samp=0x267fd30) at sp_tex_sample.c:802
802	   assert(layer < texture->array_size);
(gdb) print layer
$1 = -8
(gdb) print texture->array_size
value has been optimized out
Comment 1 Vinson Lee 2014-05-31 06:21:16 UTC
mesa: 83bba8f14603022c6c80bef95020e079d7cb73c0 (master 10.3.0-devel)

'texelFetch offset fs isampler2DArray' passes on softpipe now.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.